AC_PREREQ([2.65])
AC_INIT([MOFsim],[0.1.0],[pchilds@physics.org],[gtk-MOFsim],[https://github.com/pchilds/MOFsim])
AC_CONFIG_SRCDIR([src/main.h])
AC_CONFIG_AUX_DIR([confsupp])
AC_CONFIG_MACRO_DIR([m4])
AM_INIT_AUTOMAKE([-Wall -Werror foreign])
#AM_GNU_GETTEXT([external])
GNOME_DOC_INIT
AC_PROG_CC([gcc cc])
AC_CONFIG_HEADERS([config.h])
PKG_CHECK_MODULES([GTK], [gtk+-3.0 >=3.0.1], [AM_CONDITIONAL([HAVE_GTK3], true)], [PKG_CHECK_MODULES([GTK], [gtk+-2.0 >= 2.14 gthread-2.0], [AM_CONDITIONAL([HAVE_GTK3], false)])])
PKG_CHECK_EXISTS([meep_mpi], [HAVE_II=1], [PKG_CHECK_EXISTS([meep-mpi], [HAVE_II=1], [PKG_CHECK_EXISTS([meep-openmpi], [HAVE_II=1], [HAVE_II=0])])])
AM_CONDITIONAL([USE_II], [test "$HAVE_II" -eq 1])
AS_CASE(["$HAVE_II"], [1], [AC_DEFINE([MEEP_II], [1], [Parallel processing enabled])], [PKG_CHECK_MODULES([MEEP], [meep])])
AC_CONFIG_FILES([Makefile doc/Makefile src/Makefile])
AC_OUTPUT()
